--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
 
     <ion-tab-button tab="notifications">
       <ion-icon name="notifications"></ion-icon>
-      <ion-label>Contact</ion-label>
+      <ion-label>Notifications</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="settings">
